Fix mobile scrollbar bug

--- a/client/less/includes/base.less
+++ b/client/less/includes/base.less
@@ -213,7 +213,6 @@ p {
     box-sizing: border-box;
     width: 100%;
     max-width: 100%;
-    position: relative;
 
     .column {
         width: 50%;
