--- a/client/less/includes/track.less
+++ b/client/less/includes/track.less
@@ -11,16 +11,12 @@
 }
 
 .track-header {
-    z-index: 10;
-    position: relative;
     padding: 26px 0 12px;
     box-sizing: border-box;
 }
 
 .track-player {
     height: @trackCoverHeight;
-    z-index: 7;
-    position: relative;
     background-size: cover;
     background-position: center center;
     text-align: center;
@@ -52,7 +48,6 @@
 .track-controls {
     height: @trackControlsHeight;
     z-index: 8;
-    position: relative;
     user-select: none;
     box-shadow: 0px -5px 46px -11px rgba(0, 0, 0, 0.7);
 
@@ -92,8 +87,6 @@
 }
 
 .track-infos {
-    z-index: 10;
-    position: relative;
     padding: 24px 30px;
     box-sizing: border-box;
 
